--- a/Proyecto_Api/appsettings.json
+++ b/Proyecto_Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=localhost;Database=ApiPruebaTecnica:Trusted_Connection=true;MultipleActiveResultSets=true"}
 }
